Fix 'Export to XHTML generates empy html file'

Since the website www.oasis-open.org cannot provide the file sdocbook.dtd
and no existing "simple docbook" package is available, the relevant files
are embedded in the Umbrello source code and installed with it.

BUG:409411
FIXED-IN:2.28.3 (KDE Applications 19.04.3)