umbrello/docgenerators/simple4125/sdbcent.mod
@@ -1,0 +1,67 @@
+<!-- ...................................................................... -->
+<!-- Simplified DocBook Character Entity Module V4.1.2.5 .................. -->
+<!-- File sinclist.mod .................................................... -->
+
+<!-- Copyright 1992-2001 HaL Computer Systems, Inc.,
+     O'Reilly & Associates, Inc., ArborText, Inc., Fujitsu Software
+     Corporation, Norman Walsh, Sun Microsystems, Inc. and the
+     Organization for the Advancement of Structured Information Standards
+     (OASIS).
+
+     $Id: sdbcent.mod,v 1.3 2001/06/08 22:46:47 nwalsh Exp $
+
+     Permission to use, copy, modify and distribute the DocBook XML DTD
+     and its accompanying documentation for any purpose and without fee
+     is hereby granted in perpetuity, provided that the above copyright
+     notice and this paragraph appear in all copies.  The copyright
+     holders make no representation about the suitability of the DTD for
+     any purpose.  It is provided "as is" without expressed or implied
+     warranty.
+
+     If you modify the Simplified DocBook DTD in any way, except for
+     declaring and referencing additional sets of general entities and
+     declaring additional notations, label your DTD as a variant of
+     DocBook.  See the maintenance documentation for more information.
+
+     Please direct all questions, bug reports, or suggestions for
+     changes to the docbook@lists.oasis-open.org mailing list. For more
+     information, see http://www.oasis-open.org/docbook/.
+-->
+
+<!ENTITY % ISOamsa.module "IGNORE">
+<!ENTITY % ISOamsb.module "IGNORE">
+<!ENTITY % ISOamsc.module "IGNORE">
+<!ENTITY % ISOamsn.module "IGNORE">
+<!ENTITY % ISOamso.module "IGNORE">
+<!ENTITY % ISOamsr.module "IGNORE">
+<!ENTITY % ISObox.module "IGNORE">
+<!ENTITY % ISOcyr1.module "IGNORE">
+<!ENTITY % ISOcyr2.module "IGNORE">
+<!ENTITY % ISOdia.module "IGNORE">
+<!ENTITY % ISOgrk1.module "IGNORE">
+<!ENTITY % ISOgrk2.module "IGNORE">
+<!ENTITY % ISOgrk3.module "IGNORE">
+<!ENTITY % ISOgrk4.module "IGNORE">
+<!ENTITY % ISOlat1.module "IGNORE">
+<!ENTITY % ISOlat2.module "IGNORE">
+<!ENTITY % ISOnum.module "IGNORE">
+<!ENTITY % ISOpub.module "IGNORE">
+<!ENTITY % ISOtech.module "IGNORE">
+
+<!ENTITY % ISOlat1 PUBLIC
+"ISO 8879:1986//ENTITIES Added Latin 1//EN//XML"
+"../../xmlcharent/iso-lat1.ent">
+%ISOlat1;
+
+<!ENTITY % ISOnum PUBLIC
+"ISO 8879:1986//ENTITIES Numeric and Special Graphic//EN//XML"
+"../../xmlcharent/iso-num.ent">
+%ISOnum;
+
+<!ENTITY % ISOpub PUBLIC
+"ISO 8879:1986//ENTITIES Publishing//EN//XML"
+"../../xmlcharent/iso-pub.ent">
+%ISOpub;
+
+<!-- End of Simplified DocBook Character Entity Module V4.1.2.5 ........... -->
+<!-- ...................................................................... -->
